configures python to link with react

--- a/spotifart/the-art/package.json
+++ b/spotifart/the-art/package.json
@@ -21,5 +21,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "webpack-bundle-tracker": "^0.4.2-beta"
+  }
 }
